<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_user" />
        <item android:id="@+id/cource"
            android:title="@string/Cource"
            android:icon="@drawable/ic_close_white_24dp"
            />
        <item android:id="@+id/ofline"
            android:title="@string/offline"
            android:icon="@drawable/ic_close_white_24dp"
            />
        <item android:id="@+id/studymatrial"
            android:title="@string/studymatrial"
            android:icon="@drawable/ic_close_white_24dp"
            />
        <item android:id="@+id/freetest"
            android:title="@string/freetest"
            android:icon="@drawable/ic_close_white_24dp"
            />
        <item android:id="@+id/studenttestomonial"
            android:title="@string/studenttestomonial"
            android:icon="@drawable/ic_close_white_24dp"
            />

        <item android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_edit_user"
            app:showAsAction="collapseActionView"
            />
        <item android:id="@+id/payment"
            android:title="@string/Payment"
            android:icon="@drawable/ic_close_white_24dp"
            />
        <item android:id="@+id/seeting"
            android:title="@string/setting"
            android:icon="@drawable/ic_close_white_24dp"
            />
    </group>

</menu>