<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_5ssp"
    app:cardCornerRadius="@dimen/_5ssp"
    android:layout_height="wrap_content">
<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearlayout"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageicon"
                android:layout_margin="@dimen/_5ssp"
                android:padding="@dimen/_5ssp"
                android:src="@drawable/facebook"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/corcevalidation"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_5ssp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/courcename"
                android:padding="@dimen/_2sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/white"
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/courcecelavle"
                android:padding="@dimen/_5sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                android:text="@string/dialog_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/offer"
                android:layout_gravity="right"
                android:minHeight="@dimen/_30sdp"
                android:minWidth="@dimen/_100sdp"
                android:background="@drawable/red_button_background"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:text="@string/dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descraption"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:background="@drawable/white_radius"
                android:padding="@dimen/_5sdp"
                android:textStyle="normal"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/text_color"
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:padding="@dimen/_2sdp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnregistation"
                android:minHeight="@dimen/_30sdp"
                android:layout_margin="@dimen/_5ssp"
                android:background="@drawable/green_button_background"
                android:layout_weight="1"
                android:padding="@dimen/_2sdp"
                android:textStyle="normal"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                android:text="@string/registation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnvideo"
                android:backgroundTint="@color/selectiveYellow"
                android:minHeight="@dimen/_30sdp"
                android:layout_margin="@dimen/_5ssp"
                android:background="@drawable/green_button_background"
                android:layout_weight="1"
                android:padding="@dimen/_2sdp"
                android:textStyle="normal"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                android:text="@string/Video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnsyllaburs"
                android:backgroundTint="@color/red"
                android:minHeight="@dimen/_30sdp"
                android:layout_margin="@dimen/_5ssp"
                android:background="@drawable/green_button_background"
                android:layout_weight="1"
                android:padding="@dimen/_2sdp"
                android:textStyle="normal"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                android:text="@string/syllabus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>